--- a/src/app/admin/admin-on-board.html
+++ b/src/app/admin/admin-on-board.html
@@ -6,6 +6,11 @@
                     <img id="logo_img" src="/assets/images/settings/logo_dashboard.png" alt="kleveron" />
                 </a>
             </div>
+            <div class="cmpny_logo">
+                    <a href="#">
+                        <img src="/assets/images/settings/Steer-high-logo.png" alt="" />
+                    </a>
+                </div>
             <div class="aside_nav">
                 <div class="sidebar-menu">
                     <ul class="menu">
@@ -62,187 +67,106 @@
                         </li>
                     </ul>
                 </div>
+                <div class="menu_footer">
+                        <p>
+                            <label>
+                                Powered By <b>Kleveron</b>
+                            </label>
+                        </p>
+                    </div>
             </div>
         </div>
         <div class="content_wrap right">
             <header class="frame_header">
                 <div class="row">
-                    <div class="col-xs-4">
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4">
                         <div class="navbar-header">
                             <i class="fa fa-bars"></i>
                         </div>
                     </div>
-                    <div class="col-xs-4 text_center mob_head">
-                        <h1>
-                            <label>
-                                Framework
-                            </label>
-                        </h1>
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 text_center mob_head">
+                        <h1><label>Admin Panel</label></h1>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-lg-6 col-md-6 col-sm-6">
                         <div class="header-rightside">
                             <ul class="list-inline header-top pull-right navbar-right">
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                        <img src="/assets/images/settings/user.png" alt="" class="user-icon">
-                                        <span>
-                                            <label>
-                                                John Smith
-                                            </label>
-                                        </span> <b class="caret"></b>
+                                        <img src="../images/settings/user.png" alt="" class="user-icon">
+                                        <span><label>John Smith</label></span>
+                                        <b class="caret"></b>
                                     </a>
                                     <ul class="dropdown-menu animated fadeInUpShort">
                                         <li>
-                                            <a href="#" class="view btn-sm">
-                                                <label>
-                                                    View Profile
-                                                </label>
-                                            </a>
+                                            <a href="#" class="view btn-sm"><label>View Profile</label></a>
                                         </li>
                                         <li>
-                                            <a href="#" class="view btn-sm">
-                                                <label>
-                                                    Logout
-                                                </label>
-                                            </a>
+                                            <a href="#" class="view btn-sm"><label>Logout</label></a>
                                         </li>
                                     </ul>
                                 </li>
                                 <li class="dropdown">
-                                    <a href="#" class="icon-info dropdown-toggle" data-toggle="dropdown"
-                                       role="button" aria-haspopup="true" aria-expanded="false">
-                                        <i class="fa fa-language"
-                                           aria-hidden="true"></i>
+                                    <a href="#" class="icon-info dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                        <i class="fa fa-language" aria-hidden="true"></i>
                                     </a>
                                     <ul class="dropdown-menu dropdown-menu-right animated fadeInUpShort">
                                         <li>
-                                            <a href="#" class="view btn-sm">
-                                                <label>
-                                                    English
-                                                </label>
-                                            </a>
+                                            <a href="#" class="view btn-sm"><label>English</label></a>
                                         </li>
                                         <li>
-                                            <a href="#" class="view btn-sm">
-                                                <label>
-                                                    Gujarati
-                                                </label>
-                                            </a>
+                                            <a href="#" class="view btn-sm"><label>Gujarati</label></a>
                                         </li>
                                     </ul>
                                 </li>
                                 <li class="dropdown">
-                                    <a href="#" class="icon-info dropdown-toggle" data-toggle="dropdown"
-                                       role="button" aria-haspopup="true" aria-expanded="false">
-                                        <i class="fa fa-bell" aria-hidden="true">
-                                        </i>
+                                    <a href="#" class="icon-info dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                        <i class="fa fa-bell" aria-hidden="true"></i>
                                     </a>
                                     <ul class="dropdown-menu notify-drop animated fadeInUpShort">
                                         <div class="notify-drop-title">
                                             <div class="row">
-                                                <div class="col-md-6 col-sm-6 col-xs-6">
-                                                    <label>
-                                                        Hiren (<b>2</b>)
-                                                    </label>
-                                                </div>
-                                                <div class="col-md-6 col-sm-6 col-xs-6 text-right">
-                                                    <a href=""><i class="fa fa-dot-circle-o"></i></a>
-                                                </div>
-                                                <div class="clearfix">
-                                                </div>
+                                                <div class="col-md-6 col-sm-6 col-xs-6"><label>Hiren (<b>2</b>)</label></div>
+                                                <div class="col-md-6 col-sm-6 col-xs-6 text-right"><a href=""><i class="fa fa-dot-circle-o"></i></a></div>
+                                                <div class="clearfix"></div>
                                             </div>
                                         </div>
                                         <div class="drop-content">
                                             <li>
-                                                <div class="col-md-3 col-sm-3 col-xs-3">
-                                                    <div class="notify-img">
-                                                        <img src="/assets/images/on-boarding/notification-img.png" alt="">
-                                                    </div>
-                                                </div>
+                                                <div class="col-md-3 col-sm-3 col-xs-3"><div class="notify-img"><img src="../images/on-boarding/notification-img.png" alt=""></div></div>
                                                 <div class="col-md-9 col-sm-9 col-xs-9 pd-l0">
-                                                    <a href="">
-                                                        <label>
-                                                            Ahmet
-                                                        </label>
-                                                    </a><p>
-                                                        <label>
-                                                            Lorem ipsum sit dolor amet consilium. Saat önce
-                                                        </label>
-                                                    </p>
+                                                    <a href=""><label>Ahmet</label></a><p><label> Lorem ipsum sit dolor amet consilium. Saat önce</label></p>
                                                 </div>
-                                                <div class="clearfix">
-                                                </div>
+                                                <div class="clearfix"></div>
                                             </li>
                                             <li>
-                                                <div class="col-md-3 col-sm-3 col-xs-3">
-                                                    <div class="notify-img">
-                                                        <img src="/assets/images/on-boarding/notification-img.png" alt="">
-                                                    </div>
-                                                </div>
+                                                <div class="col-md-3 col-sm-3 col-xs-3"><div class="notify-img"><img src="../images/on-boarding/notification-img.png" alt=""></div></div>
                                                 <div class="col-md-9 col-sm-9 col-xs-9 pd-l0">
-                                                    <a href="">
-                                                        <label>
-                                                            Ahmet
-                                                        </label>
-                                                    </a><p>
-                                                        <label>
-                                                            Lorem ipsum sit dolor amet consilium. Saat önce
-                                                        </label>
-                                                    </p>
+                                                    <a href=""><label>Ahmet</label></a><p><label> Lorem ipsum sit dolor amet consilium. Saat önce</label></p>
                                                 </div>
-                                                <div class="clearfix">
-                                                </div>
+                                                <div class="clearfix"></div>
                                             </li>
                                             <li>
-                                                <div class="col-md-3 col-sm-3 col-xs-3">
-                                                    <div class="notify-img">
-                                                        <img src="/assets/images/on-boarding/notification-img.png" alt="">
-                                                    </div>
-                                                </div>
+                                                <div class="col-md-3 col-sm-3 col-xs-3"><div class="notify-img"><img src="../images/on-boarding/notification-img.png" alt=""></div></div>
                                                 <div class="col-md-9 col-sm-9 col-xs-9 pd-l0">
-                                                    <a href="">
-                                                        <label>
-                                                            Ahmet
-                                                        </label>
-                                                    </a><p>
-                                                        <label>
-                                                            Lorem ipsum sit dolor amet consilium. Saat önce
-                                                        </label>
-                                                    </p>
+                                                    <a href=""><label>Ahmet</label></a><p><label> Lorem ipsum sit dolor amet consilium. Saat önce</label></p>
                                                 </div>
-                                                <div class="clearfix">
-                                                </div>
+                                                <div class="clearfix"></div>
                                             </li>
                                             <li>
-                                                <div class="col-md-3 col-sm-3 col-xs-3">
-                                                    <div class="notify-img">
-                                                        <img src="/assets/images/on-boarding/notification-img.png" alt="">
-                                                    </div>
-                                                </div>
+                                                <div class="col-md-3 col-sm-3 col-xs-3"><div class="notify-img"><img src="../images/on-boarding/notification-img.png" alt=""></div></div>
                                                 <div class="col-md-9 col-sm-9 col-xs-9 pd-l0">
-                                                    <a href="">
-                                                        <label>
-                                                            Ahmet
-                                                        </label>
-                                                    </a><p>
-                                                        <label>
-                                                            Lorem ipsum sit dolor amet consilium. Saat önce
-                                                        </label>
-                                                    </p>
+                                                    <a href=""><label>Ahmet</label></a><p><label> Lorem ipsum sit dolor amet consilium. Saat önce</label></p>
                                                 </div>
-                                                <div class="clearfix">
-                                                </div>
+                                                <div class="clearfix"></div>
                                             </li>
                                         </div>
                                         <div class="notify-drop-footer text-center">
-                                            <a href="">
-                                                <i class="fa fa-eye"></i>
-                                                <label>
-                                                    View All
-                                                </label>
-                                            </a>
+                                            <a href=""><i class="fa fa-eye"></i> <label>View All</label></a>
                                         </div>
                                     </ul>
+                                </li>
+                                <li class="sec-logo">
+                                    <img src="/assets/images/settings/Steer-high-logo.png" alt="Client Logo" />
                                 </li>
                             </ul>
                         </div>
@@ -903,9 +827,9 @@
                                             </div>
                                         </div>
 
-                                        <div *ngIf="showTextBox_CEO" >
+                                        
                                                 <div *ngFor = "let tb of Textboxes_CEO">
-                                                    <div *ngIf="tb!==undefined"> 
+                                                        <div *ngIf="showTextBox_CEO && tb !== undefined" >
                                             <div class="col-md-6 col-sm-6 col-xs-12 element_box ngx-dnd-item" ngxDraggable>
                                                     <div class="action-ui" id="tour-action-ui-id">
                                                         <span class="actions">
@@ -932,7 +856,6 @@
                                                     </div>
                                                 </div>
                                                 </div>
-                                            </div>
                                         </div>
 
                                         <div class="col-md-6 col-sm-6 col-xs-12 element_box ngx-dnd-item" ngxDraggable>
@@ -961,9 +884,9 @@
                                             </div>
                                         </div>
 
-                                        <div *ngIf="showTextBox_city" >
+                                        
                                                 <div *ngFor = "let tb of Textboxes_city">
-                                                    <div *ngIf="tb!==undefined"> 
+                                                    <div *ngIf="showTextBox_city && tb!==undefined"> 
                                             <div class="col-md-6 col-sm-6 col-xs-12 element_box ngx-dnd-item" ngxDraggable>
                                                     <div class="action-ui" id="tour-action-ui-id">
                                                         <span class="actions">
@@ -991,7 +914,6 @@
                                                 </div>
                                                 </div>
                                             </div>
-                                        </div>
 
 
 
@@ -1717,12 +1639,12 @@
                                             </span>
                                         </div>
                                         
-                                        <button type="button" class="btn save_btn" (click)="saveClick()">
+                                        <button type="button" class="btn1 btn save_btn" (click)="saveClick()">
                                             <label>
                                                 Save
                                             </label>
                                         </button>
-                                        <button type="submit" class="btn tab_no next_btn">
+                                        <button type="submit" class="btn2 btn tab_no next_btn">
                                             <label>
                                                 Next
                                             </label>
