--- a/src/app/menuToggle/menuToggle.component.html
+++ b/src/app/menuToggle/menuToggle.component.html
@@ -8,8 +8,15 @@
             <div id="thm_para">
                 <div class="tgl_menu"><a (click)="changeMenu('left')">Left Menu</a></div>
                 <div class="tgl_menu"><a (click)="changeMenu('right')">Right Menu</a></div>
-                <div class="tgl_menu"><a (click)="changeColor('pink-blue')">Pink_Blue Theme</a></div>
-                <div class="tgl_menu"><a (click)="changeColor('normal')">Orange_Blue Theme</a></div>
+                <div class="tgl_menu"><a (click)="changeColor('orange-blue')">Orange Blue Theme</a></div>                
+                <div class="tgl_menu"><a (click)="changeColor('pink-blue')">Pink Blue Theme</a></div>
+                <div class="tgl_menu"><a (click)="changeColor('sky-purple')">Sky Purple Theme</a></div>
+                <div class="tgl_menu"><a (click)="changeColor('yellow-navy')">Yellow Navy Theme</a></div>     
+                <div class="tgl_menu"><a (click)="changeColor('green-purple')">Green Purple Theme</a></div>
+                <div class="tgl_menu"><a (click)="changeColor('steer-high')">Steer High Theme</a></div>       
+                <div class="tgl_menu"><a (click)="changeColor('logo')">Own Company Logo</a></div>   
+                <div class="tgl_menu"><a (click)="changeColor('default-logo')">Default Logo</a></div>                                                                
+                <div class="tgl_menu"><a (click)="changeColor('secondary-logo')">Secondary Logo</a></div>                                                                                
             </div>
         </div>
     </div>
