--- a/src/app/admin/admin-on-board.html
+++ b/src/app/admin/admin-on-board.html
@@ -3,12 +3,12 @@
         <div class="aside left">
             <div class="dash_logo">
                 <a href="#">
-                    <img id="logo_img" src="/assets/images/settings/logo_dashboard.png" alt="kleveron" />
+                    <img id="logo_img" src="./assets/images/settings/logo_dashboard.png" alt="kleveron" />
                 </a>
             </div>
             <div class="cmpny_logo">
                     <a href="#">
-                        <img src="/assets/images/settings/Steer-high-logo.png" alt="" />
+                        <img src="./assets/images/settings/Steer-high-logo.png" alt="" />
                     </a>
                 </div>
             <div class="aside_nav">
@@ -166,7 +166,7 @@
                                     </ul>
                                 </li>
                                 <li class="sec-logo">
-                                    <img src="/assets/images/settings/Steer-high-logo.png" alt="Client Logo" />
+                                    <img src="./assets/images/settings/Steer-high-logo.png" alt="Client Logo" />
                                 </li>
                             </ul>
                         </div>
