--- a/src/app/createPage/createPage1.component.html
+++ b/src/app/createPage/createPage1.component.html
@@ -6,10 +6,8 @@
         <!-- Modal -->
         <div class="modal fade control_mdl" id="control_Modal" role="dialog">
             <div class="modal-dialog">
-.
                 <!-- Modal content-->
                 <div class="modal-content">
-
                     <div class="modal_tabs add_div">
                         <div class="modal-header">
                             <button type="button" class="mdl_close" data-dismiss="modal">&times;</button>
@@ -20,25 +18,58 @@
                                 <div class="col-md-12"> <h4><label>Select div colum structure</label></h4></div>
                             </div>
                             <div class="row col_outer">
-                                <div *ngFor="let post of posts" >
                                 <div class="col-md-3 col-sm-3 col-xs-12 select_col">
                                     <div class="col_div">
                                         <div class="col_img">
-                                            <img src="{{post.img_url}}" alt="" />
+                                            <img src="images/crt-controls/col-1.png" alt="" />
                                         </div>
-                                        <div class="col_lbl"><label>{{post.css_class}}</label></div>
+                                        <div class="col_lbl"><label>col-md-12</label></div>
                                     </div>
                                     <div class="mdl_radio custom_radio">
-                                        <input type="radio" id="{{post.col_id}}" name="radio-group" (click)="setRadCol(post.css_class)">
-                                        <label for="{{post.col_id}}"></label>
+                                        <input type="radio" id="col1" name="radio-group" checked>
+                                        <label for="col1"></label>
                                     </div>
                                 </div>
-                               
-                            </div>
+                                <div class="col-md-3 col-sm-3 col-xs-12 select_col">
+                                    <div class="col_div">
+                                        <div class="col_img">
+                                            <img src="images/crt-controls/col-2.png" alt="" />
+                                        </div>
+                                        <div class="col_lbl"><label>col-md-6</label></div>
+                                    </div>
+                                    <div class="mdl_radio custom_radio">
+                                        <input type="radio" id="col2" name="radio-group" checked>
+                                        <label for="col2"></label>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 col-sm-3 col-xs-12 select_col">
+                                    <div class="col_div">
+                                        <div class="col_img">
+                                            <img src="images/crt-controls/col-3.png" alt="" />
+                                        </div>
+                                        <div class="col_lbl"><label>col-md-4</label></div>
+                                    </div>
+                                    <div class="mdl_radio custom_radio">
+                                        <input type="radio" id="col3" name="radio-group" checked>
+                                        <label for="col3"></label>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 col-sm-3 col-xs-12 select_col">
+                                    <div class="col_div">
+                                        <div class="col_img">
+                                            <img src="images/crt-controls/col-4.png" alt="" />
+                                        </div>
+                                        <div class="col_lbl"><label>col-md-3</label></div>
+                                    </div>
+                                    <div class="mdl_radio custom_radio">
+                                        <input type="radio" id="col4" name="radio-group" checked>
+                                        <label for="col4"></label>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="modal-footer modal_btn">
-                            <button type="button" class="btn nx_btn" (click)="setRad1()"><label>Next</label></button>
+                            <button type="button" class="btn nx_btn"><label>Next</label></button>
                             <button type="button" class="btn sv_btn"><label>Save</label></button>
                         </div>
                     </div>
@@ -58,16 +89,22 @@
                                 </div>
                             </div>
                             <div class="row col_outer hide_lbl_cntrl">
-                            <div *ngFor="let lbl of lbls, let idx = index" >
-                                <div class="{{lbl.div_class}}">
-                                    <label class="{{lbl.lbl_class}}">{{lbl.label_title}}</label>
-                                    <input class="{{lbl.input_class}}" type="{{lbl.input_type}}" [(ngModel)]="values[idx]">
+                                <div class="col-md-4 lbl_cntrl">
+                                    <label class="lbl_hdr">Label ID</label>
+                                    <input class="cmn_input" type="text">
                                 </div>
-                        </div>
+                                <div class="col-md-4 lbl_cntrl">
+                                    <label class="lbl_hdr">Label Name</label>
+                                    <input class="cmn_input" type="text">
+                                </div>
+                                <div class="col-md-4 lbl_cntrl">
+                                    <label class="lbl_hdr">Label Class</label>
+                                    <input class="cmn_input" type="text">
+                                </div>
                             </div>
                         </div>
                         <div class="modal-footer modal_btn">
-                            <button type="button" class="btn nx_btn hide_nxt" (click)="setlbls()"><label>Next</label></button>
+                            <button type="button" class="btn nx_btn hide_nxt"><label>Next</label></button>
                             <button type="button" class="btn nx_btn hide_skip"><label>Skip</label></button>
                             <button type="button" class="btn sv_btn"><label>Save</label></button>
                         </div>
@@ -82,32 +119,159 @@
                                 <div class="col-md-12"> <h4><label>Select Control</label></h4></div>
                             </div>
                             <div class="row col_outer">
-                                <div *ngFor="let item of inp_ctrls" >
                                 <div class="col-md-3 col-xs-12 select_col">
                                     <div class="col_div">
                                         <div class="col_img">
-                                            <img src="{{item.img_url}}" alt="" />
+                                            <img src="images/crt-controls/txt-bx.png" alt="" />
                                         </div>
-                                        <div class="{{item.div_class}}"><label>{{item.lbl_title}}</label></div>
+                                        <div class="col_lbl"><label>Input(Text)</label></div>
                                     </div>
-                                    <div class="{{item.inp_div_class}}">
-                                        <input type="{{item.inp_type}}" id="{{item.inp_id}}" name="{{item.inp_name}}" (click)="setRadioCn(item.inp_html)">
-                                        <label for="{{item.inp_id}}"></label>
+                                    <div class="mdl_radio custom_radio">
+                                        <input type="radio" id="col5" name="radio-group" checked>
+                                        <label for="col5"></label>
                                     </div>
                                 </div>
+                                <div class="col-md-3 col-xs-12 select_col">
+                                    <div class="col_div">
+                                        <div class="col_img">
+                                            <img src="images/crt-controls/lbl-txt-bx.png" alt="" />
+                                        </div>
+                                        <div class="col_lbl"><label>Input(Text) With Label</label></div>
+                                    </div>
+                                    <div class="mdl_radio custom_radio">
+                                        <input type="radio" id="col6" name="radio-group" checked>
+                                        <label for="col6"></label>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 col-xs-12 select_col">
+                                    <div class="col_div">
+                                        <div class="col_img">
+                                            <img src="images/crt-controls/password.png" alt="" />
+                                        </div>
+                                        <div class="col_lbl"><label>Input(Password)</label></div>
+                                    </div>
+                                    <div class="mdl_radio custom_radio">
+                                        <input type="radio" id="col7" name="radio-group" checked>
+                                        <label for="col7"></label>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 col-xs-12 select_col">
+                                    <div class="col_div">
+                                        <div class="col_img">
+                                            <img src="images/crt-controls/time-pkr.png" alt="" />
+                                        </div>
+                                        <div class="col_lbl"><label>TimePicker</label></div>
+                                    </div>
+                                    <div class="mdl_radio custom_radio">
+                                        <input type="radio" id="col8" name="radio-group" checked>
+                                        <label for="col8"></label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row col_outer">
+                                <div class="col-md-3 col-xs-12 select_col">
+                                    <div class="col_div">
+                                        <div class="col_img">
+                                            <img src="images/crt-controls/chkbx.png" alt="" />
+                                        </div>
+                                        <div class="col_lbl"><label>Input(Checkbox)</label></div>
+                                    </div>
+                                    <div class="mdl_radio custom_radio">
+                                        <input type="radio" id="col9" name="radio-group" checked>
+                                        <label for="col9"></label>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 col-xs-12 select_col">
+                                    <div class="col_div">
+                                        <div class="col_img">
+                                            <img src="images/crt-controls/radio.png" alt="" />
+                                        </div>
+                                        <div class="col_lbl"><label>Input(Radio)</label></div>
+                                    </div>
+                                    <div class="mdl_radio custom_radio">
+                                        <input type="radio" id="col10" name="radio-group" checked>
+                                        <label for="col10"></label>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 col-xs-12 select_col">
+                                    <div class="col_div">
+                                        <div class="col_img">
+                                            <img src="images/crt-controls/button.png" alt="" />
+                                        </div>
+                                        <div class="col_lbl"><label>Input(Button)</label></div>
+                                    </div>
+                                    <div class="mdl_radio custom_radio">
+                                        <input type="radio" id="col11" name="radio-group" checked>
+                                        <label for="col11"></label>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 col-xs-12 select_col">
+                                    <div class="col_div">
+                                        <div class="col_img">
+                                            <img src="images/crt-controls/switch.png" alt="" />
+                                        </div>
+                                        <div class="col_lbl"><label>Toggle Switch</label></div>
+                                    </div>
+                                    <div class="mdl_radio custom_radio">
+                                        <input type="radio" id="col12" name="radio-group" checked>
+                                        <label for="col12"></label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row col_outer">
+                                <div class="col-md-3 col-xs-12 select_col">
+                                    <div class="col_div">
+                                        <div class="col_img">
+                                            <img src="images/crt-controls/select-option.png" alt="" />
+                                        </div>
+                                        <div class="col_lbl"><label>Select</label></div>
+                                    </div>
+                                    <div class="mdl_radio custom_radio">
+                                        <input type="radio" id="col13" name="radio-group" checked>
+                                        <label for="col13"></label>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 col-xs-12 select_col">
+                                    <div class="col_div">
+                                        <div class="col_img">
+                                            <img src="images/crt-controls/select-chkbx.png" alt="" />
+                                        </div>
+                                        <div class="col_lbl"><label>Select(With Checkbox)</label></div>
+                                    </div>
+                                    <div class="mdl_radio custom_radio">
+                                        <input type="radio" id="col14" name="radio-group" checked>
+                                        <label for="col14"></label>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 col-xs-12 select_col last_brd">
+                                    <div class="col_div">
+                                        <div class="col_img">
+                                            <img src="images/crt-controls/date-pkr.png" alt="" />
+                                        </div>
+                                        <div class="col_lbl"><label>Date Picker</label></div>
+                                    </div>
+                                    <div class="mdl_radio custom_radio">
+                                        <input type="radio" id="col15" name="radio-group" checked>
+                                        <label for="col15"></label>
+                                    </div>
                                 </div>
 
 
                             </div>
                             <div class="row col_outer cntrl_info">
-                                <div *ngFor="let item of controls" >
-                                <div class="{{item.div_class}}}">
-                                    <label class="{{item.lbl_class}}">{{item.label_title}}</label>
-                                    <input class="{{item.input_class}}" type="{{item.input_type}}">
+                                <div class="col-md-4 col-xs-12 lbl_cntrl">
+                                    <label class="lbl_hdr">Control Id</label>
+                                    <input class="cmn_input" type="text">
                                 </div>
+                                <div class="col-md-4 col-xs-12 lbl_cntrl">
+                                    <label class="lbl_hdr">Control Value</label>
+                                    <input class="cmn_input" type="text">
                                 </div>
-                                
-                                
+                                <div class="col-md-4 col-xs-12 lbl_cntrl">
+                                    <label class="lbl_hdr">Control Placeholder</label>
+                                    <input class="cmn_input" type="text">
+                                </div>
+
                                 <div class="col-md-4 col-xs-12 custom_chk_bx">
                                     <div class="chk_bx chk_top">
                                         <input type="checkbox" id="vldtn_btn">
@@ -123,7 +287,7 @@
                         </div>
                         <div class="modal-footer modal_btn">
 
-                            <button type="button" class="btn sv_btn" (click)="saveFunc()"><label>Save</label></button>
+                            <button type="button" class="btn sv_btn"><label>Save</label></button>
                         </div>
                     </div>
 
