--- a/src/app/createPage/createPage1.component.html
+++ b/src/app/createPage/createPage1.component.html
@@ -21,7 +21,7 @@
                                 <div class="col-md-3 col-sm-3 col-xs-12 select_col">
                                     <div class="col_div">
                                         <div class="col_img">
-                                            <img src="images/crt-controls/col-1.png" alt="" />
+                                            <img src="./assets/images/crt-controls/col-1.png" alt="" />
                                         </div>
                                         <div class="col_lbl"><label>col-md-12</label></div>
                                     </div>
@@ -33,7 +33,7 @@
                                 <div class="col-md-3 col-sm-3 col-xs-12 select_col">
                                     <div class="col_div">
                                         <div class="col_img">
-                                            <img src="images/crt-controls/col-2.png" alt="" />
+                                            <img src="./assets/images/crt-controls/col-2.png" alt="" />
                                         </div>
                                         <div class="col_lbl"><label>col-md-6</label></div>
                                     </div>
@@ -45,7 +45,7 @@
                                 <div class="col-md-3 col-sm-3 col-xs-12 select_col">
                                     <div class="col_div">
                                         <div class="col_img">
-                                            <img src="images/crt-controls/col-3.png" alt="" />
+                                            <img src="./assets/images/crt-controls/col-3.png" alt="" />
                                         </div>
                                         <div class="col_lbl"><label>col-md-4</label></div>
                                     </div>
@@ -57,7 +57,7 @@
                                 <div class="col-md-3 col-sm-3 col-xs-12 select_col">
                                     <div class="col_div">
                                         <div class="col_img">
-                                            <img src="images/crt-controls/col-4.png" alt="" />
+                                            <img src="./assets/images/crt-controls/col-4.png" alt="" />
                                         </div>
                                         <div class="col_lbl"><label>col-md-3</label></div>
                                     </div>
@@ -122,7 +122,7 @@
                                 <div class="col-md-3 col-xs-12 select_col">
                                     <div class="col_div">
                                         <div class="col_img">
-                                            <img src="images/crt-controls/txt-bx.png" alt="" />
+                                            <img src="./assets/images/crt-controls/txt-bx.png" alt="" />
                                         </div>
                                         <div class="col_lbl"><label>Input(Text)</label></div>
                                     </div>
@@ -134,7 +134,7 @@
                                 <div class="col-md-3 col-xs-12 select_col">
                                     <div class="col_div">
                                         <div class="col_img">
-                                            <img src="images/crt-controls/lbl-txt-bx.png" alt="" />
+                                            <img src="./assets/images/crt-controls/lbl-txt-bx.png" alt="" />
                                         </div>
                                         <div class="col_lbl"><label>Input(Text) With Label</label></div>
                                     </div>
@@ -146,7 +146,7 @@
                                 <div class="col-md-3 col-xs-12 select_col">
                                     <div class="col_div">
                                         <div class="col_img">
-                                            <img src="images/crt-controls/password.png" alt="" />
+                                            <img src="./assets/images/crt-controls/password.png" alt="" />
                                         </div>
                                         <div class="col_lbl"><label>Input(Password)</label></div>
                                     </div>
@@ -158,7 +158,7 @@
                                 <div class="col-md-3 col-xs-12 select_col">
                                     <div class="col_div">
                                         <div class="col_img">
-                                            <img src="images/crt-controls/time-pkr.png" alt="" />
+                                            <img src="./assets/images/crt-controls/time-pkr.png" alt="" />
                                         </div>
                                         <div class="col_lbl"><label>TimePicker</label></div>
                                     </div>
@@ -172,7 +172,7 @@
                                 <div class="col-md-3 col-xs-12 select_col">
                                     <div class="col_div">
                                         <div class="col_img">
-                                            <img src="images/crt-controls/chkbx.png" alt="" />
+                                            <img src="./assets/images/crt-controls/chkbx.png" alt="" />
                                         </div>
                                         <div class="col_lbl"><label>Input(Checkbox)</label></div>
                                     </div>
@@ -184,7 +184,7 @@
                                 <div class="col-md-3 col-xs-12 select_col">
                                     <div class="col_div">
                                         <div class="col_img">
-                                            <img src="images/crt-controls/radio.png" alt="" />
+                                            <img src="./assets/images/crt-controls/radio.png" alt="" />
                                         </div>
                                         <div class="col_lbl"><label>Input(Radio)</label></div>
                                     </div>
@@ -196,7 +196,7 @@
                                 <div class="col-md-3 col-xs-12 select_col">
                                     <div class="col_div">
                                         <div class="col_img">
-                                            <img src="images/crt-controls/button.png" alt="" />
+                                            <img src="./assets/images/crt-controls/button.png" alt="" />
                                         </div>
                                         <div class="col_lbl"><label>Input(Button)</label></div>
                                     </div>
@@ -208,7 +208,7 @@
                                 <div class="col-md-3 col-xs-12 select_col">
                                     <div class="col_div">
                                         <div class="col_img">
-                                            <img src="images/crt-controls/switch.png" alt="" />
+                                            <img src="./assets/images/crt-controls/switch.png" alt="" />
                                         </div>
                                         <div class="col_lbl"><label>Toggle Switch</label></div>
                                     </div>
@@ -222,7 +222,7 @@
                                 <div class="col-md-3 col-xs-12 select_col">
                                     <div class="col_div">
                                         <div class="col_img">
-                                            <img src="images/crt-controls/select-option.png" alt="" />
+                                            <img src="./assets/images/crt-controls/select-option.png" alt="" />
                                         </div>
                                         <div class="col_lbl"><label>Select</label></div>
                                     </div>
@@ -234,7 +234,7 @@
                                 <div class="col-md-3 col-xs-12 select_col">
                                     <div class="col_div">
                                         <div class="col_img">
-                                            <img src="images/crt-controls/select-chkbx.png" alt="" />
+                                            <img src="./assets/images/crt-controls/select-chkbx.png" alt="" />
                                         </div>
                                         <div class="col_lbl"><label>Select(With Checkbox)</label></div>
                                     </div>
@@ -246,7 +246,7 @@
                                 <div class="col-md-3 col-xs-12 select_col last_brd">
                                     <div class="col_div">
                                         <div class="col_img">
-                                            <img src="images/crt-controls/date-pkr.png" alt="" />
+                                            <img src="./assets/images/crt-controls/date-pkr.png" alt="" />
                                         </div>
                                         <div class="col_lbl"><label>Date Picker</label></div>
                                     </div>
@@ -296,6 +296,8 @@
             </div>
         </div>
     </div>
+</div>
+
 <div id="displayControls">
     <!-- <input ngui-datetime-picker date-format='DD-MM-YYYY HH:MM' year='2014' month='12' day='31' hour='23' minute='59' class='form-control' id='starttime'    placeholder='Start Date'  [min-date]='minDate'   [close-on-select]='false'/> -->
     <!-- <div class="col-md-6 col-sm-6 col-xs-12 dtl_row klvrn_dt_picker">
