--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -1,5 +1,5 @@
 
-﻿/*        common css         */
+/*        common css         */
 
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700');
 
