--- a/src/app/admin/listContent/list.component.html
+++ b/src/app/admin/listContent/list.component.html
@@ -316,7 +316,7 @@
                  <ng-container *ngFor="let aproj of emp.ActiveProject;let j=index"> 
                         
                                 
-                <td class="padd_btm bord_rt rm_div" (click)="sorting('ap')">
+                <td class="padd_btm bord_rt rm_div">
                         <ng-container *ngIf="i==0">
                                 
                             <div class="clone_icon_action" id="tour-action-ui-id">
